--- a/docs/src/notebooks/bistable.ipynb
+++ b/docs/src/notebooks/bistable.ipynb
@@ -63,17 +63,17 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "outputs": [],
+   "cell_type": "code",
    "source": [
-    "```@example main\n",
     "using Plots\n",
     "using Plots.PlotMeasures\n",
     "using OptimalControl\n",
     "using NLPModelsIpopt\n",
-    "nothing # hide\n",
-    "```"
+    "nothing # hide"
    ],
-   "metadata": {}
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -83,9 +83,9 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "outputs": [],
+   "cell_type": "code",
    "source": [
-    "```@example main\n",
     "# Regularization of the PWL dynamics\n",
     "function s⁺(x, θ, regMethod)\n",
     "    if regMethod == 1 # Hill\n",
@@ -94,13 +94,8 @@
     "        out = 1 - 1/(1 + exp(k*(x-θ)))\n",
     "    end\n",
     "    return out\n",
-    "end"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "end\n",
+    "\n",
     "# Regularization of |u(t) - 1|\n",
     "function abs_m1(u, regMethod)\n",
     "    if regMethod == 1 # Hill\n",
@@ -110,10 +105,10 @@
     "    end\n",
     "    return out*(u - 1)\n",
     "end\n",
-    "nothing # hide\n",
-    "```"
+    "nothing # hide"
    ],
-   "metadata": {}
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -123,9 +118,9 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "outputs": [],
+   "cell_type": "code",
    "source": [
-    "```@example main\n",
     "# Constant definition\n",
     "k₁    = 1;    k₂    = 1     # Production rates\n",
     "γ₁    = 1.4;  γ₂    = 1.6   # Degradation rates\n",
@@ -133,78 +128,38 @@
     "uₘᵢₙ  = 0.6;  uₘₐₓ  = 1.4   # Control bounds\n",
     "x₀    = [0.65, 0.2]         # Initial point\n",
     "x₂ᶠ   = 0.55                # Final point\n",
-    "λ     = 0.25                # Trade-off fuel/time"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "λ     = 0.25                # Trade-off fuel/time\n",
+    "\n",
     "# Initial guest for the NLP\n",
     "tf    = 1.5\n",
     "u(t)  = 0\n",
-    "sol = (control=u, variable=tf)"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "sol = (control=u, variable=tf)\n",
+    "\n",
     "# Optimal control problem definition\n",
-    "ocp = @def begin"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "ocp = @def begin\n",
+    "\n",
     "    tf ∈ R,                variable\n",
     "    t ∈ [ 0, tf ],         time\n",
     "    x = ( x₁, x₂ ) ∈ R²,   state\n",
-    "    u ∈ R,                 control"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "    u ∈ R,                 control\n",
+    "\n",
     "    x(0) == x₀\n",
     "    x₁(tf) ≤ θ₁\n",
-    "    x₂(tf) == x₂ᶠ"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "    x₂(tf) == x₂ᶠ\n",
+    "\n",
     "    uₘᵢₙ ≤ u(t) ≤ uₘₐₓ\n",
-    "    tf ≥ 0"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "    tf ≥ 0\n",
+    "\n",
     "    ẋ(t) == [ - γ₁*x₁(t) + k₁*u(t)*(1 - s⁺(x₂(t),θ₂,regMethod))  ,\n",
-    "              - γ₂*x₂(t) + k₂*u(t)*(1 - s⁺(x₁(t),θ₁,regMethod)) ]"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "    ∫(λ*abs_m1(u(t),regMethod) + 1-λ) → min"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "              - γ₂*x₂(t) + k₂*u(t)*(1 - s⁺(x₁(t),θ₁,regMethod)) ]\n",
+    "\n",
+    "    ∫(λ*abs_m1(u(t),regMethod) + 1-λ) → min\n",
+    "\n",
     "end\n",
-    "nothing # hide\n",
-    "```"
+    "nothing # hide"
    ],
-   "metadata": {}
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -221,9 +176,9 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "outputs": [],
+   "cell_type": "code",
    "source": [
-    "```@example main\n",
     "regMethod = 1       # Hill regularization\n",
     "ki = 50             # Value of k for the first iteration\n",
     "N = 400\n",
@@ -234,10 +189,10 @@
     "    global k = ki\n",
     "    global sol = solve(ocp; grid_size=N, init=sol, print_level=4*print_level)\n",
     "end\n",
-    "nothing # hide\n",
-    "```"
+    "nothing # hide"
    ],
-   "metadata": {}
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -247,45 +202,30 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "outputs": [],
+   "cell_type": "code",
    "source": [
-    "```@example main\n",
     "plt1 = plot()\n",
-    "plt2 = plot()"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "plt2 = plot()\n",
+    "\n",
     "tf    = variable(sol)\n",
     "tspan = range(0, tf, N)   # time interval\n",
     "x₁(t) = state(sol)(t)[1]\n",
     "x₂(t) = state(sol)(t)[2]\n",
-    "u(t)  = control(sol)(t)"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "u(t)  = control(sol)(t)\n",
+    "\n",
     "xticks = ([0, θ₁], [\"0\", \"θ₁\"])\n",
-    "yticks = ([0, θ₂, x₂ᶠ], [\"0\", \"θ₂\", \"x₂ᶠ\"])"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "yticks = ([0, θ₂, x₂ᶠ], [\"0\", \"θ₂\", \"x₂ᶠ\"])\n",
+    "\n",
     "plot!(plt1, x₁.(tspan), x₂.(tspan), label=\"optimal trajectory\", xlabel=\"x₁\", ylabel=\"x₂\", xlimits=(θ₁/3, k₁/γ₁), ylimits=(0, k₂/γ₂))\n",
     "scatter!(plt1, [x₀[1]], [x₀[2]], label=\"x₀\", color=:deepskyblue)\n",
     "xticks!(xticks)\n",
     "yticks!(yticks)\n",
     "plot!(plt2, tspan, u, label=\"optimal control\", xlabel=\"t\")\n",
-    "plot(plt1, plt2; layout=(1,2), size=(800,300))\n",
-    "```"
+    "plot(plt1, plt2; layout=(1,2), size=(800,300))"
    ],
-   "metadata": {}
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -302,9 +242,9 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "outputs": [],
+   "cell_type": "code",
    "source": [
-    "```@example main\n",
     "regMethod = 2       # Exponential regularization\n",
     "ki = 50             # Value of k for the first iteration\n",
     "N = 400\n",
@@ -315,10 +255,10 @@
     "    global k = ki\n",
     "    global sol = solve(ocp; grid_size=N, init=sol, print_level=4*print_level)\n",
     "end\n",
-    "nothing # hide\n",
-    "```"
+    "nothing # hide"
    ],
-   "metadata": {}
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -328,45 +268,30 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "outputs": [],
+   "cell_type": "code",
    "source": [
-    "```@example main\n",
     "plt1 = plot()\n",
-    "plt2 = plot()"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "plt2 = plot()\n",
+    "\n",
     "tf    = variable(sol)\n",
     "tspan = range(0, tf, N)   # time interval\n",
     "x₁(t) = state(sol)(t)[1]\n",
     "x₂(t) = state(sol)(t)[2]\n",
-    "u(t)  = control(sol)(t)"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "u(t)  = control(sol)(t)\n",
+    "\n",
     "xticks = ([0, θ₁], [\"0\", \"θ₁\"])\n",
-    "yticks = ([0, θ₂, x₂ᶠ], [\"0\", \"θ₂\", \"x₂ᶠ\"])"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "yticks = ([0, θ₂, x₂ᶠ], [\"0\", \"θ₂\", \"x₂ᶠ\"])\n",
+    "\n",
     "plot!(plt1, x₁.(tspan), x₂.(tspan), label=\"optimal trajectory\", xlabel=\"x₁\", ylabel=\"x₂\", xlimits=(θ₁/3, k₁/γ₁), ylimits=(0, k₂/γ₂))\n",
     "scatter!(plt1, [x₀[1]], [x₀[2]], label=\"x₀\", color=:deepskyblue)\n",
     "xticks!(xticks)\n",
     "yticks!(yticks)\n",
     "plot!(plt2, tspan, u, label=\"optimal control\", xlabel=\"t\")\n",
-    "plot(plt1, plt2; layout=(1,2), size=(800,300))\n",
-    "```"
+    "plot(plt1, plt2; layout=(1,2), size=(800,300))"
    ],
-   "metadata": {}
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
