--- a/docs/src/notebooks/oscillator.ipynb
+++ b/docs/src/notebooks/oscillator.ipynb
@@ -54,17 +54,17 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "outputs": [],
+   "cell_type": "code",
    "source": [
-    "```@example main\n",
     "using Plots\n",
     "using Plots.PlotMeasures\n",
     "using OptimalControl\n",
     "using NLPModelsIpopt\n",
-    "nothing # hide\n",
-    "```"
+    "nothing # hide"
    ],
-   "metadata": {}
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -74,9 +74,9 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "outputs": [],
+   "cell_type": "code",
    "source": [
-    "```@example main\n",
     "# Regularization of the PWL dynamics\n",
     "function s⁺(x, θ, regMethod)\n",
     "    if regMethod == 1 # Hill\n",
@@ -85,13 +85,8 @@
     "        out = 1 - 1/(1 + exp(k*(x-θ)))\n",
     "    end\n",
     "    return out\n",
-    "end"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "end\n",
+    "\n",
     "# Regularization of |u(t) - 1|\n",
     "function abs_m1(u, regMethod)\n",
     "    if regMethod == 1 # Hill\n",
@@ -101,10 +96,10 @@
     "    end\n",
     "    return out*(u - 1)\n",
     "end\n",
-    "nothing # hide\n",
-    "```"
+    "nothing # hide"
    ],
-   "metadata": {}
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -114,88 +109,48 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "outputs": [],
+   "cell_type": "code",
    "source": [
-    "```@example main\n",
     "# Constant definition\n",
     "k₁    = 2;    k₂    = 3     # Production rates\n",
     "γ₁    = 0.2;  γ₂    = 0.3   # Degradation rates\n",
     "θ₁    = 4;    θ₂    = 3     # Transcriptional thresholds\n",
     "uₘᵢₙ  = 0.6;  uₘₐₓ  = 1.4   # Control bounds\n",
     "x₁ᶜ   = 4.7                 # Cycle point (initial and final)\n",
-    "λ     = 0.5                 # Trade-off fuel/time"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "λ     = 0.5                 # Trade-off fuel/time\n",
+    "\n",
     "# Initial guest for the NLP\n",
     "tf    = 1\n",
     "u(t)  = 1\n",
-    "sol = (control=u, variable=tf)"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "sol = (control=u, variable=tf)\n",
+    "\n",
     "# Optimal control problem definition\n",
-    "ocp = @def begin"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "ocp = @def begin\n",
+    "\n",
     "    tf ∈ R,                variable\n",
     "    t ∈ [ 0, tf ],         time\n",
     "    x = ( x₁, x₂ ) ∈ R²,   state\n",
-    "    u ∈ R,                 control"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "    u ∈ R,                 control\n",
+    "\n",
     "    x₁(0) == x₁ᶜ\n",
     "    x₂(0) == θ₂\n",
     "    x₁(tf) == x₁ᶜ\n",
-    "    x₂(tf) == θ₂"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "    x₂(tf) == θ₂\n",
+    "\n",
     "    uₘᵢₙ ≤ u(t) ≤ uₘₐₓ\n",
-    "    tf ≥ 1 # Force the state out of the confort zone"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "    tf ≥ 1 # Force the state out of the confort zone\n",
+    "\n",
     "    ẋ(t) == [ - γ₁*x₁(t) + k₁*u(t)*(1 - s⁺(x₂(t),θ₂,regMethod))  ,\n",
-    "              - γ₂*x₂(t) + k₂*s⁺(x₁(t),θ₁,regMethod) ]"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "    ∫(λ*abs_m1(u(t),regMethod) + 1-λ) → min"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "              - γ₂*x₂(t) + k₂*s⁺(x₁(t),θ₁,regMethod) ]\n",
+    "\n",
+    "    ∫(λ*abs_m1(u(t),regMethod) + 1-λ) → min\n",
+    "\n",
     "end\n",
-    "nothing # hide\n",
-    "```"
+    "nothing # hide"
    ],
-   "metadata": {}
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -212,9 +167,9 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "outputs": [],
+   "cell_type": "code",
    "source": [
-    "```@example main\n",
     "regMethod = 1       # Hill regularization\n",
     "ki = 10             # Value of k for the first iteration\n",
     "N = 400\n",
@@ -225,10 +180,10 @@
     "    global k = ki\n",
     "    global sol = solve(ocp; grid_size=N, init=sol, print_level=4*print_level)\n",
     "end\n",
-    "nothing # hide\n",
-    "```"
+    "nothing # hide"
    ],
-   "metadata": {}
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -238,49 +193,34 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "outputs": [],
+   "cell_type": "code",
    "source": [
-    "```@example main\n",
     "plt1 = plot()\n",
-    "plt2 = plot()"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "plt2 = plot()\n",
+    "\n",
     "tf    = variable(sol)\n",
     "tspan = range(0, tf, N)   # time interval\n",
     "x₁(t) = state(sol)(t)[1]\n",
     "x₂(t) = state(sol)(t)[2]\n",
-    "u(t)  = control(sol)(t)"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "u(t)  = control(sol)(t)\n",
+    "\n",
     "xticks = ([0, θ₁, x₁ᶜ], [\"0\", \"θ₁\", \"x₁ᶜ\"])\n",
-    "yticks = ([0, θ₂], [\"0\", \"θ₂\"])"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "yticks = ([0, θ₂], [\"0\", \"θ₂\"])\n",
+    "\n",
     "plot!(plt1, x₁.(tspan), x₂.(tspan), label=\"optimal trajectory\", xlabel=\"x₁\", ylabel=\"x₂\", xlimits=(θ₁/1.5, 1.1*x₁ᶜ), ylimits=(θ₂/2, 1.75*θ₂))\n",
     "xticks!(xticks)\n",
     "yticks!(yticks)\n",
     "plot!(plt2, tspan, u, label=\"optimal control\", xlabel=\"t\")\n",
-    "plot(plt1, plt2; layout=(1,2), size=(800,300))\n",
-    "```"
+    "plot(plt1, plt2; layout=(1,2), size=(800,300))"
    ],
-   "metadata": {}
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
    "source": [
-    "<!-- ## Resolution through exponential regularization"
+    "## Resolution through exponential regularization"
    ],
    "metadata": {}
   },
@@ -292,9 +232,9 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "outputs": [],
+   "cell_type": "code",
    "source": [
-    "```@example main\n",
     "regMethod = 2       # Exponential regularization\n",
     "ki = 100             # Value of k for the first iteration\n",
     "N = 400\n",
@@ -305,10 +245,10 @@
     "    global k = ki\n",
     "    global sol = solve(ocp; grid_size=N, init=sol, print_level=4*print_level)\n",
     "end\n",
-    "nothing # hide\n",
-    "```"
+    "nothing # hide"
    ],
-   "metadata": {}
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -318,44 +258,29 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "outputs": [],
+   "cell_type": "code",
    "source": [
-    "```@example main\n",
     "plt1 = plot()\n",
-    "plt2 = plot()"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "plt2 = plot()\n",
+    "\n",
     "tf    = variable(sol)\n",
     "tspan = range(0, tf, N)   # time interval\n",
     "x₁(t) = state(sol)(t)[1]\n",
     "x₂(t) = state(sol)(t)[2]\n",
-    "u(t)  = control(sol)(t)"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "u(t)  = control(sol)(t)\n",
+    "\n",
     "xticks = ([0, θ₁, x₁ᶜ], [\"0\", \"θ₁\", \"x₁ᶜ\"])\n",
-    "yticks = ([0, θ₂], [\"0\", \"θ₂\"])"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "yticks = ([0, θ₂], [\"0\", \"θ₂\"])\n",
+    "\n",
     "plot!(plt1, x₁.(tspan), x₂.(tspan), label=\"optimal trajectory\", xlabel=\"x₁\", ylabel=\"x₂\", xlimits=(θ₁/1.5, 1.1*x₁ᶜ), ylimits=(θ₂/2, 1.75*θ₂))\n",
     "xticks!(xticks)\n",
     "yticks!(yticks)\n",
     "plot!(plt2, tspan, u, label=\"optimal control\", xlabel=\"t\")\n",
-    "plot(plt1, plt2; layout=(1,2), size=(800,300))\n",
-    "```"
+    "plot(plt1, plt2; layout=(1,2), size=(800,300))"
    ],
-   "metadata": {}
+   "metadata": {},
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
