--- a/docs/src/notebooks/oscillator.ipynb
+++ b/docs/src/notebooks/oscillator.ipynb
@@ -142,7 +142,7 @@
     "    x₂(tf) == θ₂\n",
     "\n",
     "    uₘᵢₙ ≤ u(t) ≤ uₘₐₓ\n",
-    "    tf ≥ 1 # Force the state out of the confort zone\n",
+    "    tf ≥ 1 # Force the state out of the comfort zone\n",
     "\n",
     "    ẋ(t) == [\n",
     "        - γ₁*x₁(t) + k₁*u(t)*(1 - s⁺(x₂(t), θ₂, regMethod)),\n",
